<?xml version="1.0"?>
<package format="2">
  <name>bin2topic</name>
  <version>0.0.0</version>
  <description>The bin2topic package</description>

  <maintainer email="soyeongkim@hanyang.ac.kr">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

</package>
